# cmake_study

OPTION/: .ccls  CMakeLists.txt  Config.h.in
OPTION/.ccls-cache/@@home@bokutotu@HDD@cmake@CUDA/: @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @opt@OpenBLAS@include@cblas.h.blob  @opt@OpenBLAS@include@openblas_config.h.blob  @usr@include@complex.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@sched.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@time.h.blob  @usr@include@x86_64-linux-gnu@bits@cmathcalls.h.blob  @usr@include@x86_64-linux-gnu@bits@cpu-set.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@mathdef.h.blob  @usr@include@x86_64-linux-gnu@bits@sched.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-uintn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@time.h.blob  @usr@include@x86_64-linux-gnu@bits@time64.h.blob  @usr@include@x86_64-linux-gnu@bits@timesize.h.blob  @usr@include@x86_64-linux-gnu@bits@types.h.blob  @usr@include@x86_64-linux-gnu@bits@types@FILE.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__FILE.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__fpos64_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__fpos_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__mbstate_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@clock_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@clockid_t.h.blob  (+14 more)
SHARED_LIB/CALL_PERSONAL_SHARDLIB/: CMakeLists.txt  main.cpp
SHARED_LIB/LIB/: CMakeLists.txt
SHARED_LIB/LIB/include/: shared.h
SHARED_LIB/LIB2/: CMakeLists.txt
(+34 files in other folders)
